
  * Update locales.
  * Various code improvements.
  * Set filesystem blocks reserved for the super-user to 0% for EXT3/4. See
    http://forums.openmediavault.org/viewtopic.php?f=10&t=3047 how to tune
    existing filesystems.
  * Fix bug in RPC Config::applyChanges().
  * Mantis 0000910: Suppot for /dev/bcache0 block device.
  * Mantis 0000915: Error In Raid Management page.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 29 Nov 2013 00:16:41 +0100

openmediavault (0.5.24) stable; urgency=low

  * Update locales.
  * Various code improvements.
  * Add helper function to modify file permissions.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 25 Nov 2013 18:15:30 +0100

openmediavault (0.5.23) stable; urgency=low

  * Increase Apache directive 'LimitRequestFieldSize' to 32KiB.
  * Mantis 0000898: Fix ukrainian typing.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 24 Nov 2013 11:44:04 +0100

openmediavault (0.5.22) stable; urgency=low

  * Add ability to remount filesystems via WebGUI.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 15 Nov 2013 12:07:06 +0100

openmediavault (0.5.21) stable; urgency=low

  * Various improvements in storage backend code.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 14 Nov 2013 12:25:48 +0100

openmediavault (0.5.20) stable; urgency=low

  * Update locales.
  * Add support for Linux Device Mapper devices in new storage backend.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 12 Nov 2013 12:09:28 +0100

openmediavault (0.5.19) stable; urgency=low

  * Various code improvements.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 07 Nov 2013 23:34:10 +0100

openmediavault (0.5.18) stable; urgency=low

  * Update locales.
  * Improve storage device handling in core framework.
  * Fire OMV_NOTIFY_EVENT notifications after module services has been
    started/stopped, e.g. 'org.openmediavault.module.service.nfs.stop'