@@ -8,6 +8,7 @@ openmediavault (0.5.25) stable; urgency=low
   * Fix bug in RPC Config::applyChanges().
   * Mantis 0000910: Suppot for /dev/bcache0 block device.
   * Mantis 0000915: Error In Raid Management page.
+  * Mantis 0000919: Plugin list only shows 25 plugins.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 29 Nov 2013 00:16:41 +0100
 
